--- a/style.css
+++ b/style.css
@@ -385,6 +385,7 @@ body {
   flex-direction: column;
   align-items: start;
   padding-bottom: 30px;
+  overflow: hidden;
 }
 .section-2__txt {
   padding-left: 185px;
@@ -415,6 +416,7 @@ body {
   justify-content: space-between;
   align-items: center;
   padding-top: 50px;
+  overflow: hidden;
 }
 .section-2__images-block-small {
   display: flex;
@@ -456,6 +458,10 @@ body {
 }
 .section-2__images-block-avatar {
   padding-top: 10px;
+}
+
+.button-767px {
+  display: none;
 }
 
 /* ----------------------ANIMAL WORLD-------------------- */
@@ -731,6 +737,10 @@ body {
     align-items: center;
     max-width: 700px;
   }
+  .images__anim {
+    width: 200px;
+    height: 200px;
+  }
   .section-3 {
     max-width: 900px;
   }
@@ -864,13 +874,56 @@ body {
     text-transform: capitalize;
   }
   .section-2__images {
-    width: 320px;
+    width: 350px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    overflow: hidden;
   }
   .section-2__images-block:nth-child(2) {
     display: none;
   }
   .section-2__images-block {
     margin: 0 auto;
+    padding-top: 10px;
+  }
+  .section-2__images-block-3 {
+    display: none;
+  }
+  /* BUTTON */
+  .button-767px {
+    display: block;
+  }
+  .button-767px__input {
+    display: none;
+  }
+  .footer-button {
+    margin-top: 7px;
+    cursor: pointer;
+    padding: 8px 90px;
+    border-radius: 20px;
+    background-color: #A259FF;
+    color: var(--White, #FFF);
+    font-family: Space Mono;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 140%; /* 39.2px */
+    text-transform: capitalize;
+    text-align: center;
+  }
+  .cards-767px {
+    display: none;
+    transition: 0.7s;
+  }
+  .button-767px__input[type=checkbox]:checked ~ .cards-767px {
+    display: block;
+    transform: translateY(10px);
+    padding-bottom: 20px;
+  }
+  .section-3 {
+    padding-bottom: 20px;
   }
   .section-3__block-creator {
     width: 310px;
@@ -932,6 +985,9 @@ body {
   .header__info-block-right-image {
     width: 290px;
     height: 205px;
+  }
+  .images__anim:nth-child(3) {
+    display: none;
   }
 }
 @media (max-width: 777px) and (max-width: 577px) {
@@ -1092,6 +1148,12 @@ body {
   }
   .section-3__top-btn {
     display: none;
+  }
+}
+@media (max-width: 777px) and (max-width: 481px) {
+  .images__anim {
+    width: 150px;
+    height: 150px;
   }
 }
 @media (max-width: 777px) and (max-width: 385px) {
