--- a/style.scss
+++ b/style.scss
@@ -386,6 +386,7 @@ margin-bottom: 20px;
 cursor: pointer;
     }
 
+
     @keyframes form {
         0%{
             transform: translateY(900px);
@@ -536,6 +537,18 @@ padding-top: 10px;
         }
     }
 
+    .section-3__top-btn:hover .section-3__rocket-img{
+        transform: rotateY(-360deg);
+    }
+    .section-3__rocket-img{
+        transition: 0.3s;
+    }
+    .section-3__top-btn:hover{
+        border: 2px solid var(--Call-to-Action, #000);
+        height: 40px;
+        width: 160px;
+    }
+
     .section-3{
         max-width: 1150px;
         margin: 0 auto;
@@ -580,6 +593,8 @@ font-size: 16px;
 font-style: normal;
 font-weight: 600;
 line-height: 140%; /* 22.4px */
+cursor: pointer;
+transition: 0.3s;
         }
 
         &__blocks{
@@ -612,6 +627,11 @@ line-height: 140%; /* 22.4px */
     &__block-creator:hover {
         transform: scale(1.1);
         filter: drop-shadow(0px 0px 10px #f10f0fdd);
+    }
+
+    &__block-creator:hover .section-3__creator-number{
+        background-color: #f4ca23;
+        color: #000;
     }
 
 &__creator-number {
@@ -662,6 +682,45 @@ line-height: 140%; /* 22.4px */
 
     .mob-section-3__blocks{
         display: none;
+    }
+
+    
+    .section-4{
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: start;
+        max-width: 1150px;
+        margin: 0 auto;
+        margin-top: 50px;
+
+        &__title{
+            color: var(--White, #FFF);
+            font-family: Work Sans;
+            font-size: 38px;
+            font-style: normal;
+            font-weight: 600;
+            line-height: 120%; /* 45.6px */
+            text-transform: capitalize;
+        }
+
+
+        &__box-1-block{
+            width: 320px;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            border-radius: 20px;
+            background: #3B3B3B;
+        }
+
+        &__box-1-block-images{
+            background-image: url(./images-4/first.png);
+            position: relative;
+            background-repeat: no-repeat;
+            background-size: cover;
+            position: relative;
+        }
     }
 
     /* Стилі для великих екранів (дисплей максимум 1199рх) */
@@ -904,6 +963,11 @@ line-height: 140%; /* 22.4px */
             font-weight: 600;
             line-height: 140%; /* 22.4px */
             margin-top: 10px;   
+        }
+        .fullskrin__start{
+            max-width: 450px;
+            transform: translateY(-40px);
+            margin-left: -60px;
         }
         .header__info-block-left-ratings{
             width: 260px;
