--- a/style.css
+++ b/style.css
@@ -724,6 +724,118 @@ body {
   display: none;
 }
 
+/* SECTION 5--------------------------- */
+.section-5 {
+  margin: 0 auto;
+  max-width: 1150px;
+  /* --------------------------BOX--------------------------- */
+}
+.section-5__top {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: end;
+}
+.section-5__top-txt-title {
+  color: var(--White, #FFF);
+  font-family: Work Sans;
+  font-size: 38px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 120%; /* 45.6px */
+  text-transform: capitalize;
+}
+.section-5__top-txt-descr {
+  color: var(--White, #FFF);
+  font-family: Work Sans;
+  font-size: 22px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 160%; /* 35.2px */
+  text-transform: capitalize;
+}
+.section-5__top-btn {
+  display: flex;
+  height: 60px;
+  width: 170px;
+  padding: 0px 40px;
+  justify-content: space-around;
+  align-items: center;
+  border-radius: 20px;
+  border: 2px solid var(--Call-to-Action, #A259FF);
+  color: #FFF;
+  text-align: center;
+  font-family: Work Sans;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 140%; /* 22.4px */
+}
+.section-5__box {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding: 60px 0;
+}
+.section-5__box-block {
+  width: 330px;
+  border-radius: 20px;
+  background: #3B3B3B;
+}
+.section-5__box-info-creator {
+  padding-top: 5px;
+  padding-left: 40px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+.section-5__box-info-title {
+  padding-top: 15px;
+  padding-left: 40px;
+  color: var(--White, #FFF);
+  font-family: Work Sans;
+  font-size: 22px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 140%; /* 30.8px */
+  text-transform: capitalize;
+}
+.section-5__box-info-creator-nick {
+  padding-left: 10px;
+  color: var(--White, #FFF);
+  font-family: Space Mono;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 140%; /* 22.4px */
+}
+.section-5__box-info-datas {
+  padding-top: 20px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+}
+.section-5__box-info-datas-prise-title {
+  color: #858584;
+  font-family: Space Mono;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 110%; /* 13.2px */
+}
+.section-5__box-info-datas-prise-descr {
+  padding: 13px 0;
+  color: var(--White, #FFF);
+  text-align: right;
+  font-family: Space Mono;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 140%; /* 22.4px */
+}
+
 /* Стилі для великих екранів (дисплей максимум 1199рх) */
 @media (max-width: 1199px) {
   .section-2 {
@@ -772,6 +884,15 @@ body {
   .section-4__block-background {
     width: 220px;
     height: 190px;
+  }
+  .section-5 {
+    padding: 0 20px;
+  }
+  .section-5__box-block {
+    width: 315px;
+  }
+  .section-5__box-block-img {
+    width: 315px;
   }
 }
 /* Стилі для середніх екранів (дисплей максимум 991рх) */
@@ -933,6 +1054,23 @@ body {
     width: 90px;
     left: 25%;
     top: 20%;
+  }
+  .section-5__box-block {
+    width: 300px;
+  }
+  .section-5__box-block-img {
+    width: 300px;
+  }
+}
+@media (max-width: 955px) {
+  .section-5__box-block:nth-child(3) {
+    display: none;
+  }
+  .section-5__box-block {
+    width: 315px;
+  }
+  .section-5__box-block-img {
+    width: 315px;
   }
 }
 /* Стилі для малих екранів (дисплей максимум 767рх) */
@@ -1129,6 +1267,50 @@ body {
   }
   .images__anim:nth-child(3) {
     display: none;
+  }
+  .section-5__box-block {
+    width: 280px;
+  }
+  .section-5__box-block-img {
+    width: 280px;
+  }
+  .section-5__top-txt-title {
+    color: var(--White, #FFF);
+    font-family: Work Sans;
+    font-size: 28px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 140%; /* 39.2px */
+    text-transform: capitalize;
+  }
+  .section-5__top-txt-descr {
+    color: var(--White, #FFF);
+    font-family: Work Sans;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 140%; /* 22.4px */
+  }
+  .section-5__top-btn {
+    color: #FFF;
+    text-align: center;
+    font-family: Work Sans;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 140%; /* 22.4px */
+  }
+}
+@media (max-width: 621px) {
+  .section-5__box-block:nth-child(2) {
+    display: none;
+  }
+  .section-5__box-block {
+    margin: 0 auto;
+    width: 320px;
+  }
+  .section-5__box-block-img {
+    width: 320px;
   }
 }
 /* Стилі для дуже малих екранів (дисплей максимум 575рх) */
@@ -1335,7 +1517,7 @@ body {
     display: none;
   }
 }
-@media (max-width: 481px) {
+@media (max-width: 490px) {
   .images__anim {
     width: 150px;
     height: 150px;
@@ -1346,6 +1528,35 @@ body {
   }
   .fullskrin__start__input {
     margin-left: -23px;
+  }
+  .section-5__top-txt-title {
+    color: var(--White, #FFF);
+    font-family: Work Sans;
+    font-size: 23px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 140%; /* 39.2px */
+    text-transform: capitalize;
+  }
+  .section-5__top-txt-descr {
+    color: var(--White, #FFF);
+    font-family: Work Sans;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 140%; /* 22.4px */
+  }
+  .section-5__top-btn {
+    padding: 0 30px;
+    height: 40px;
+    width: 150px;
+    color: #FFF;
+    text-align: center;
+    font-family: Work Sans;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 140%; /* 22.4px */
   }
 }
 @media (max-width: 385px) {
