--- a/style.css
+++ b/style.css
@@ -868,22 +868,14 @@ body {
     padding-left: 13px;
     padding-right: 13px;
   }
+  .section-4 {
+    padding: 0 20px;
+  }
   .section-4__title {
     padding-left: 20px;
   }
-  .section-4__box {
-    max-width: 930px;
-  }
-  .section-4__box-1-block-images {
-    width: 220px;
-  }
   .section-4__box-1-block {
-    width: 220px;
-    height: 250px;
-  }
-  .section-4__block-background {
-    width: 220px;
-    height: 190px;
+    width: 250px;
   }
   .section-5 {
     padding: 0 20px;
@@ -1035,25 +1027,6 @@ body {
     flex-direction: column;
     justify-content: space-around;
     align-items: start;
-  }
-  .section-4__box {
-    max-width: 730px;
-  }
-  .section-4__box-1-block-images {
-    width: 180px;
-  }
-  .section-4__box-1-block {
-    width: 180px;
-    height: 220px;
-  }
-  .section-4__block-background {
-    width: 180px;
-    height: 170px;
-  }
-  .section-4__box-1-block-icon {
-    width: 90px;
-    left: 25%;
-    top: 20%;
   }
   .section-5__box-block {
     width: 300px;
@@ -1340,6 +1313,7 @@ body {
     transition: 0.3s;
     font-size: 25px;
     font-weight: 600;
+    font-family: cursive;
   }
   .header__body-right-navigate-link:hover {
     color: #2B2B2B;
@@ -1516,6 +1490,21 @@ body {
   .section-3__top-btn {
     display: none;
   }
+  .section-4__box-1-block {
+    position: relative;
+    width: 200px;
+  }
+  .section-4__block-background {
+    width: 200px;
+  }
+  .section-4__box-1-block-images {
+    width: 200px;
+  }
+  .section-4__box-1-block-icon {
+    position: absolute;
+    left: 23%;
+    top: 32%;
+  }
 }
 @media (max-width: 490px) {
   .images__anim {
@@ -1528,6 +1517,33 @@ body {
   }
   .fullskrin__start__input {
     margin-left: -23px;
+  }
+  .section-4__box-1-block-icon {
+    top: 22%;
+    width: 80px;
+  }
+  .section-4__box-1-block {
+    width: 150px;
+    height: 170px;
+  }
+  .section-4__block-background {
+    width: 150px;
+    height: 130px;
+  }
+  .section-4__box-1-block-images {
+    height: 130px;
+    width: 150px;
+  }
+  .section-4__box-1-block-name {
+    color: var(--White, #FFF);
+    font-family: Work Sans;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 140%; /* 30.8px */
+    text-transform: capitalize;
+    padding-left: 5px;
+    padding-bottom: 17px;
   }
   .section-5__top-txt-title {
     color: var(--White, #FFF);
@@ -1610,5 +1626,19 @@ body {
   }
   .section-2__images-block-small-more {
     padding: 27px 10px;
+  }
+  .section-4 {
+    padding: 0 10px;
+  }
+  .section-5__top-btn {
+    font-size: 14px;
+    font-weight: 600;
+  }
+  .section-5__box-block-img {
+    width: 310px;
+  }
+  .section-5__box-block {
+    width: 310px;
+    transform: translateX(-10px);
   }
 }/*# sourceMappingURL=style.css.map */
